form validation completed

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <img src="./src/images/icon-error.svg" class="hidden absolute top-[14px] right-5" alt="">
           </div>
 
-          <button class="bg-Green w-full hover:bg-Green/80 transition-colors text-white rounded-md py-5 uppercase font-semibold shadow-[0_5px_2px_0_hsla(154,_49%,_61%,_0.70)]">
+          <button class="w-full bg-Green opacity-80 transition-colors text-white rounded-md py-5 uppercase font-semibold shadow-[0_5px_2px_0_hsla(154,_49%,_61%,_0.70)]" id="btnSubmit" disabled>
             Claim your free trial 
           </button>
           <p class="text-center text-[12px] text-Grayish-Blue">By clicking the button, you are agreeing to our <strong class="text-Red"><a href="#">Terms and Services</a></strong></p>
